--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'variables';
+
+body{
+  background-color: $dark-gray;
+  color: #fff;
+}
+
+.container{
+  max-width: 600px;
+  margin: 0 auto;
+}
+
